--- a/now.json
+++ b/now.json
@@ -3,13 +3,13 @@
     "builds": [
         {
             "src": "index.js",
-            "user": "@now/node-server"
+            "use": "@now/node-server"
         }
     ],
     "routes": [
         {
             "src": "/.*",
-            "dest": "index.js" 
+            "dest": "index.js"
         }
     ]
 }
